# ilang

./: .gitignore  Cargo.toml  HANDOFF.md  README.md  ilang.toml
crates/ilang-cli/: Cargo.toml  build.rs
crates/ilang-cli/src/: main.rs  manifest.rs  project.rs  walk.rs
crates/ilang-cli/tests/: capabilities.rs  cocoa_appkit.rs  cocoa_foundation.rs  directx12_bindings.rs  gtk4_bindings.rs  programs.rs  repl.rs  run.rs  windows_bindings.rs
crates/ilang-cli/tests/programs/: _smoke.il  ilang.toml
crates/ilang-cli/tests/programs/01_basics/: arith_float.il  arith_int.il  array_literal_dynamic_inference.il  bitwise.il  closures.il  closures_heap.il  closures_jit.il  comments_and_asi.il  comparison.il  default_arg_heap_and_reeval.il  default_args.il  destructure_let_underscore.il  float_assoc_constants.il  for_in_array.il  for_in_range.il  if_elif_else.il  int_assoc_constants.il  let_and_assign.il  literals.il  logical.il  loop_break_value.il  loops.il  match_basic.il  match_int_range.il  match_optional.il  numeric_conversions.il  operator_precedence.il  primitive_hash_code.il  primitive_to_string.il  return_paths.il  shift_signedness.il  string_encode_utf16.il  string_from_utf16.il  string_hash_code.il  string_ops.il  template_literal.il  u64_signedness.il  unit_fn_discards_tail.il  unit_type_and_indirect_call.il  unsigned_literal_and_cast.il
crates/ilang-cli/tests/programs/02_classes/: arc_aliasing.il  arc_array_of_objects.il  arc_field_holds.il  arc_scope_drop.il  child_no_init_inherits_parent.il  class_basic.il  class_eq_ref.il  class_field_types.il  class_method_chain.il  class_no_init.il  derive_enum_field.il  f32_field_from_f64_value.il  generic_class.il  iflet_heap_release.il  inheritance_basic.il  inheritance_deinit_chain.il  inheritance_ref_equality.il  init_default_args.il  (+17 more)
crates/ilang-codegen/: Cargo.toml
crates/ilang-codegen/src/: arc.rs  compiler.rs  drops.rs  env.rs  error.rs  lib.rs  lower.rs  lower_ctrl.rs  lower_expr.rs  lower_op.rs  lower_stmt.rs  math_externs.rs  monomorphize.rs  native_extern.rs  os_externs.rs  runtime.rs  test_externs.rs  ty.rs  value.rs
crates/ilang-codegen/tests/: jit.rs
crates/ilang-eval/: Cargo.toml
crates/ilang-eval/src/: error.rs  externs.rs  interpreter.rs  lib.rs  ops.rs  value.rs
crates/ilang-eval/tests/: eval.rs
crates/ilang-lsp/: Cargo.toml
crates/ilang-lsp/src/: analyse.rs  backend.rs  builtins.rs  call_hierarchy.rs  code_actions.rs  code_lens.rs  completion.rs  diag.rs  document_symbol.rs  external.rs  folding_range.rs  formatter.rs  handlers.rs  helpers.rs  implementation.rs  imports.rs  inlay_hints.rs  main.rs  project.rs  references.rs  rename.rs  rename_conflicts.rs  selection_range.rs  semantic_tokens.rs  signature_help.rs  symbols.rs  text.rs  text_utils.rs  types.rs  walker.rs  workspace_symbol_cache.rs
crates/ilang-lsp/src/code_actions/: init_gen.rs  interface_impl.rs  match_arms.rs  mod.rs
crates/ilang-lsp/src/completion/: context.rs  globals.rs  handler.rs  mod.rs  types.rs
crates/ilang-lsp/src/formatter/: emit.rs  match_break.rs  mod.rs  rewrap.rs  spacing.rs
crates/ilang-lsp/src/rename_conflicts/: local_visitor.rs  mod.rs  param_visitor.rs
crates/ilang-lsp/src/text/: doc.rs  literals.rs  locate.rs  mod.rs  signature.rs  span.rs  words.rs
crates/ilang-lsp/src/walker/: exprs.rs  infer.rs  items.rs  mod.rs  refs.rs  stmts.rs
crates/ilang-mir/: Cargo.toml
crates/ilang-mir-codegen/: Cargo.toml
crates/ilang-mir-codegen/src/: aot.rs  compile.rs  lib.rs  ty.rs
crates/ilang-mir-codegen/src/aot/: helpers.rs  mod.rs  name_table.rs
crates/ilang-mir-codegen/src/compile/: abi.rs  binop_cast.rs  cascade.rs  fmt_emit.rs  host_array.rs  host_map.rs  host_math.rs  host_misc.rs  host_os.rs  host_raw_mem.rs  host_test.rs  jit_setup.rs  jit_symbols.rs  layout.rs  lower_function.rs  lower_inst.rs  lower_term_const.rs  mod.rs  print_emit.rs  print_kind.rs  program_decl.rs  reflection.rs  registration.rs
crates/ilang-mir-codegen/tests/: aot_smoke.rs  end_to_end.rs  run_main.rs
crates/ilang-mir/benches/: check_lower.rs
crates/ilang-mir/src/: ast_dce.rs  builder.rs  inst.rs  lib.rs  lower.rs  monomorphize.rs  printer.rs  program.rs  types.rs  validate.rs
crates/ilang-mir/src/lower/: body_cx.rs  call_fn.rs  calls.rs  coerce.rs  collect.rs  control.rs  env.rs  expr.rs  fn_expr.rs  iter_ctor.rs  literals.rs  lower_state.rs  match_.rs  meta.rs  mod.rs  ops.rs  stmt.rs  utils.rs
crates/ilang-mir/src/monomorphize/: class.rs  enums.rs  fns.rs  hoist.rs  methods.rs  mod.rs  walk.rs
crates/ilang-mir/src/passes/: arc_peephole.rs  branch_fold.rs  cap_gate.rs  const_fold.rs  dce.rs  dce_fn.rs  escape_object.rs  inline.rs  mod.rs  promote_locals.rs  util.rs
crates/ilang-mir/tests/: arc_peephole.rs  lower_e2e.rs  smoke.rs
crates/ilang-parser/: Cargo.toml
crates/ilang-parser/benches/: scan_parse.rs
crates/ilang-parser/src/: error.rs  expr.rs  item.rs  lib.rs  loader.rs  normalize.rs  parser.rs  stmt.rs  visibility.rs  walk.rs
crates/ilang-parser/src/expr/: control.rs  mod.rs  pattern.rs  postfix.rs  prefix.rs
crates/ilang-parser/src/item/: attrs.rs  class.rs  const_.rs  enum_.rs  extern_c.rs  extern_objc.rs  fn_.rs  mod.rs  types.rs  use_.rs
crates/ilang-parser/src/loader/: apply_use.rs  builtin.rs  consts.rs  derive.rs  dup_pub.rs  mod.rs  prefix.rs  prescan.rs  qualify.rs  rename.rs  resolve.rs  spans.rs  target_filter.rs
crates/ilang-parser/src/normalize/: async_desugar.rs  dealias.rs  mod.rs  state_machine_v2.rs  validate.rs  walk.rs
crates/ilang-parser/src/stdlib/: events.il  math.il  os.il  path.il  regex.il  test.il
crates/ilang-parser/tests/: parse.rs
crates/ilang-runtime/: Cargo.toml
crates/ilang-runtime/src/: alloc.rs  arrays.rs  caps.rs  cascade.rs  classes.rs  closures.rs  crash_handler.rs  enums.rs  equality.rs  fmt.rs  fs.rs  kind.rs  lib.rs  maps.rs  math.rs  objc_blocks.rs  optionals.rs  os.rs  pool.rs  print.rs  print_dispatch.rs  promises.rs  raw_mem.rs  refcount.rs  regex.rs  sets.rs  slots.rs  strings.rs  test_externs.rs  test_helpers.rs  time.rs  timers.rs  tuples.rs
(+1710 files in other folders)
