[workspace]
resolver = "2"
members = [
    "crates/ilang-ast",
    "crates/ilang-lexer",
    "crates/ilang-parser",
    "crates/ilang-types",
    "crates/ilang-mir",
    "crates/ilang-mir-codegen",
    "crates/ilang-codegen",
    "crates/ilang-cli",
    "crates/ilang-lsp",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.75"

[workspace.dependencies]
ilang-ast = { path = "crates/ilang-ast" }
ilang-lexer = { path = "crates/ilang-lexer" }
ilang-parser = { path = "crates/ilang-parser" }
ilang-types = { path = "crates/ilang-types" }
ilang-mir = { path = "crates/ilang-mir" }
ilang-mir-codegen = { path = "crates/ilang-mir-codegen" }
ilang-codegen = { path = "crates/ilang-codegen" }
thiserror = "1"
clap = { version = "4", features = ["derive"] }
rustyline = "14"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
