[workspace]
resolver = "2"
members = [
    "crates/ilang-ast",
    "crates/ilang-lexer",
    "crates/ilang-parser",
    "crates/ilang-types",
    "crates/ilang-mir",
    "crates/ilang-mir-codegen",
    "crates/ilang-runtime",
    "crates/ilang-cli",
    "crates/ilang-lsp",
    "tools/gtk4-bindgen",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.75"

# Keep enough debug info in the release binary that `atos` (macOS) /
# `addr2line` (Linux) can resolve return addresses emitted by the
# unix signal handler in `ilang-runtime::crash_handler`. Line-tables
# add ~10 MB but no speed regression.
[profile.release]
debug = "line-tables-only"

[workspace.dependencies]
ilang-ast = { path = "crates/ilang-ast" }
ilang-lexer = { path = "crates/ilang-lexer" }
ilang-parser = { path = "crates/ilang-parser" }
ilang-types = { path = "crates/ilang-types" }
ilang-mir = { path = "crates/ilang-mir" }
ilang-mir-codegen = { path = "crates/ilang-mir-codegen" }
ilang-runtime = { path = "crates/ilang-runtime" }
thiserror = "1"
clap = { version = "4", features = ["derive"] }
rustyline = "14"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
