[package]
name = "ilang-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ilang"
path = "src/main.rs"

[dependencies]
ilang-ast = { workspace = true }
ilang-lexer = { workspace = true }
ilang-parser = { workspace = true }
ilang-eval = { workspace = true }
ilang-types = { workspace = true }
ilang-codegen = { workspace = true }
ilang-mir = { workspace = true }
ilang-mir-codegen = { workspace = true }
clap = { workspace = true }
rustyline = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
