[package]
name = "ilang"
version.workspace = true
edition.workspace = true
license.workspace = true

# `src/main.rs` is auto-detected as a `[[bin]]` named after the
# package, so no explicit bin section is needed — the CLI is invoked
# as `cargo run -p ilang` and produces `target/<profile>/ilang`.

[dependencies]
ilang-ast = { workspace = true }
ilang-lexer = { workspace = true }
ilang-parser = { workspace = true }
ilang-types = { workspace = true }
ilang-mir = { workspace = true }
ilang-mir-codegen = { workspace = true }
# Pulled in so cargo emits the static-library facet
# (`libilang_runtime.a`) into the same target/ profile directory the
# `ilang build` subcommand picks up when invoking `cc`.
ilang-runtime = { workspace = true }
clap = { workspace = true }
rustyline = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }

# Used at runtime on Windows to locate cl.exe (MSVC linker driver)
# and the VC++ environment (LIB, PATH) needed for AOT linking.
[target.'cfg(windows)'.dependencies]
cc = "1"
