[package]
name = "ilang-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ilang-ast = { path = "../ilang-ast" }
ilang-types = { path = "../ilang-types" }
thiserror = { workspace = true }
cranelift = "0.131"
cranelift-jit = "0.131"
cranelift-module = "0.131"
cranelift-frontend = "0.131"
cranelift-codegen = "0.131"
cranelift-native = "0.131"
target-lexicon = "0.13"
libloading = "0.8"

[dev-dependencies]
ilang-lexer = { path = "../ilang-lexer" }
ilang-parser = { path = "../ilang-parser" }
ilang-types = { path = "../ilang-types" }
