[package]
name = "ilang-eval"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ilang-ast = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
ilang-lexer = { workspace = true }
ilang-parser = { workspace = true }
ilang-types = { workspace = true }
