[package]
name = "ilang-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ilang-ast = { workspace = true }
ilang-lexer = { workspace = true }
ilang-parser = { workspace = true }
ilang-types = { workspace = true }
tower-lsp = "0.20"
tokio = { version = "1", features = ["rt-multi-thread", "io-std", "macros"] }
serde_json = "1"
serde = { workspace = true }
toml = { workspace = true }
