[package]
name = "ilang-mir-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ilang-ast = { workspace = true }
ilang-mir = { workspace = true }
ilang-runtime = { workspace = true }
cranelift = "0.132"
cranelift-jit = "0.132"
cranelift-object = "0.132"
cranelift-module = "0.132"
cranelift-frontend = "0.132"
cranelift-codegen = "0.132"
cranelift-native = "0.132"
object = { version = "0.39", default-features = false, features = ["write", "macho"] }
thiserror = { workspace = true }

[dev-dependencies]
ilang-lexer = { workspace = true }
ilang-parser = { workspace = true }
