[package]
name = "ilang-mir"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ilang-ast = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
ilang-ast = { workspace = true }
ilang-lexer = { workspace = true }
ilang-parser = { workspace = true }
