[package]
name = "ilang-mir"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ilang-ast = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
ilang-ast = { workspace = true }
ilang-lexer = { workspace = true }
ilang-parser = { workspace = true }
ilang-types = { workspace = true }
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
walkdir = "2"

[[bench]]
name = "check_lower"
harness = false
