[package]
name = "ilang-parser"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ilang-ast = { workspace = true }
ilang-lexer = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
walkdir = "2"

[[bench]]
name = "scan_parse"
harness = false
